// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with elements 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<p
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class=""
    >
      <p>
        hello
      </p>
    </li>
    <li
      class=""
    >
      <p>
        world
      </p>
    </li>
  </ul>
</p>
`;

exports[`it works with ordered 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c1 {
  list-style-type: decimal;
  list-style-position: inside;
}

<p
  class="c0"
>
  <ol
    class="c1"
  >
    <li
      class=""
    >
      hello
    </li>
    <li
      class=""
    >
      world
    </li>
  </ol>
</p>
`;

exports[`it works with strings 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<p
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class=""
    >
      hello
    </li>
    <li
      class=""
    >
      world
    </li>
  </ul>
</p>
`;

exports[`it works with unordered 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  color: #292B3E;
}

.c1 {
  list-style-type: disc;
  list-style-position: inside;
}

<p
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class=""
    >
      hello
    </li>
    <li
      class=""
    >
      world
    </li>
  </ul>
</p>
`;
